feat: first assembler commands

--- a/Source/Software/Assembler/CMakeLists.txt
+++ b/Source/Software/Assembler/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
-project(Assembler)
+project(assembler)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(assembler assembler.cpp command_parser.cpp)
+add_executable(assembler assembler.cpp)
+
+add_subdirectory(commands)
+
+target_link_libraries(assembler PRIVATE commands)
