--- a/Source/Software/Compiler/binary_tree/CMakeLists.txt
+++ b/Source/Software/Compiler/binary_tree/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(binary_tree binary_tree.cpp token.cpp IOperator.cpp operators.cpp)
+add_library(binary_tree binary_tree.cpp)
+
+target_include_directories(binary_tree PUBLIC ${CMAKE_SOURCE_DIR}/token)
+target_link_libraries(binary_tree PRIVATE token)
