feat: operator properties

--- a/Source/Software/Compiler/token/CMakeLists.txt
+++ b/Source/Software/Compiler/token/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_library(token token.cpp IOperator.cpp operators.cpp)
-
-# target_include_directories(token PUBLIC ${CMAKE_SOURCE_DIR}/binary_tree)
-# target_link_libraries(token PRIVATE binary_tree)
+add_library(token token.cpp operators.cpp)
