--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
     "ranges": "cpp",
     "span": "cpp",
     "variant": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "set": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
