feat: line parsing

--- a/Source/Software/Compiler/token/CMakeLists.txt
+++ b/Source/Software/Compiler/token/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(token token.cpp operators.cpp tokenizer.cpp assembly.cpp)
+add_library(token token.cpp operators.cpp tokenizer.cpp assembly.cpp line.cpp)
