fix: working constant folding

--- a/Source/Software/Compiler/optimisation/CMakeLists.txt
+++ b/Source/Software/Compiler/optimisation/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_library(optimisation constant_folding.cpp data_flow_analysis.cpp)
+add_library(optimisation STATIC constant_folding.cpp data_flow_analysis.cpp)
 
 target_include_directories(optimisation PUBLIC ${CMAKE_SOURCE_DIR}/token)
-target_link_libraries(optimisation PRIVATE token)
+
+add_subdirectory(binary_tree)
+
+target_link_libraries(optimisation PRIVATE token binary_tree)
