feat: while and if conditions pushing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,8 @@
     "variant": "cpp",
     "unordered_set": "cpp",
     "set": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "cassert": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
