feat: save to mem variables

--- a/Source/Software/Compiler/resolvers/CMakeLists.txt
+++ b/Source/Software/Compiler/resolvers/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(resolvers cycles_resolver.cpp)
+add_library(resolvers cycles_resolver.cpp variables_resolver.cpp)
 
 target_include_directories(resolvers PUBLIC ${CMAKE_SOURCE_DIR}/token)
 
