--- a/Source/Software/Compiler/resolvers/CMakeLists.txt
+++ b/Source/Software/Compiler/resolvers/CMakeLists.txt
@@ -1,5 +1,18 @@
-add_library(resolvers cycles_resolver.cpp variables_resolver.cpp)
+project(Resolvers)
 
-target_include_directories(resolvers PUBLIC ${CMAKE_SOURCE_DIR}/token)
+add_library(resolvers
+    cycles_resolver.cpp
+    variables_resolver.cpp
+)
 
-target_link_libraries(resolvers PRIVATE token)
+target_include_directories(resolvers
+    PUBLIC
+        ${CMAKE_SOURCE_DIR}/token
+        ${CMAKE_SOURCE_DIR}/logging
+)
+
+target_link_libraries(resolvers
+    PRIVATE
+        token
+        logging
+)
