--- a/Source/Software/Compiler/token/CMakeLists.txt
+++ b/Source/Software/Compiler/token/CMakeLists.txt
@@ -1,1 +1,18 @@
-add_library(token token.cpp operators.cpp tokenizer.cpp assembly.cpp line.cpp keywords.cpp)
+add_library(token
+        token.cpp
+        operators.cpp
+        tokenizer.cpp
+        assembly.cpp
+        line.cpp
+        keywords.cpp
+)
+
+target_include_directories(token
+    PUBLIC
+        ${CMAKE_SOURCE_DIR}/logging
+)
+
+target_link_libraries(token
+    PRIVATE
+        logging
+)
