--- a/Source/Software/Compiler/optimisation/binary_tree/CMakeLists.txt
+++ b/Source/Software/Compiler/optimisation/binary_tree/CMakeLists.txt
@@ -1,4 +1,13 @@
-add_library(binary_tree binary_tree.cpp)
+add_library(binary_tree
+    binary_tree.cpp
+)
 
-target_include_directories(binary_tree PUBLIC ${CMAKE_SOURCE_DIR}/token)
-target_link_libraries(binary_tree PRIVATE token)
+target_include_directories(binary_tree
+    PUBLIC
+        ${CMAKE_SOURCE_DIR}/token
+)
+
+target_link_libraries(binary_tree
+    PRIVATE
+        token
+)
