--- a/Source/Software/Assembler/commands/CMakeLists.txt
+++ b/Source/Software/Assembler/commands/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_library(commands command_base.cpp command_interface.hpp command_parser.cpp commands.cpp)
+add_library(commands
+    command_base.cpp
+    command_interface.hpp
+    command_parser.cpp
+    commands.cpp
+)
