feat: assembler preprocesing

--- a/Source/Software/Assembler/CMakeLists.txt
+++ b/Source/Software/Assembler/CMakeLists.txt
@@ -11,8 +11,10 @@ add_executable(assembler
 )
 
 add_subdirectory(commands)
+add_subdirectory(preprocessing)
 
 target_link_libraries(assembler
     PRIVATE
         commands
+        preprocessing
 )
