--- a/.gitignore
+++ b/.gitignore
@@ -65,17 +65,15 @@ xvlog.*
 ## checkpoint files
 *.dcp
 
-<<<<<<< HEAD
-VHDL-soft-core.gen/
-=======
 VHDL-soft-core.gen/
 VHDL-soft-core.ip_user_files/sim_scripts/
 VHDL-soft-core.ip_user_files/bd/
 
 # Ignore simulations but leave preload.txt and /work/
 Simulations/*
-!simulations/rom_preload.txt
-!simulations/work/
+Simulations/work/*
+!Simulations/rom_preload.txt
+!Simulations/work/_info
 
 ## Modelsim
 *.qtl
@@ -85,4 +83,3 @@ Simulations/*
 #Cmake
 build/
 Source/Software/Assembler/build/
->>>>>>> b57c5da (fix:gitignore simulations)
