--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,8 @@
     "set": "cpp",
     "stack": "cpp",
     "cassert": "cpp",
-    "map": "cpp"
+    "map": "cpp",
+    "cstring": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
