--- a/Source/Software/Assembler/preprocessing/CMakeLists.txt
+++ b/Source/Software/Assembler/preprocessing/CMakeLists.txt
@@ -1,3 +1,13 @@
 add_library(preprocessing
     preprocessor.cpp
 )
+
+target_include_directories(preprocessing
+    PUBLIC
+        ${CMAKE_SOURCE_DIR}/lines
+)
+
+target_link_libraries(preprocessing
+    PRIVATE
+        lines
+)
