feat: assembler and processor use signed values in jumps (hardcoded solution)

--- a/Source/Software/Assembler/preprocessing/CMakeLists.txt
+++ b/Source/Software/Assembler/preprocessing/CMakeLists.txt
@@ -5,9 +5,11 @@ add_library(preprocessing
 target_include_directories(preprocessing
     PUBLIC
         ${CMAKE_SOURCE_DIR}/lines
+        ${CMAKE_SOURCE_DIR}/commands
 )
 
 target_link_libraries(preprocessing
     PRIVATE
         lines
+        commands
 )
