--- a/Source/Software/Assembler/CMakeLists.txt
+++ b/Source/Software/Assembler/CMakeLists.txt
@@ -6,11 +6,11 @@ project(assembler)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    add_compile_options(-Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wformat=2)
-elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-    add_compile_options(/W4)
-endif()
+# if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+#     add_compile_options(-Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wformat=2)
+# elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+#     add_compile_options(/W4)
+# endif()
 
 add_executable(assembler
     assembler.cpp
@@ -19,15 +19,18 @@ add_executable(assembler
 add_subdirectory(commands)
 add_subdirectory(preprocessing)
 add_subdirectory(lines)
+add_subdirectory(common)
 
 # So no directory is needed in includes
 include_directories(commands)
 include_directories(preprocessing)
 include_directories(lines)
+include_directories(common)
 
 target_link_libraries(assembler
     PRIVATE
         commands
         preprocessing
         lines
+        common
 )
