--- a/Source/Software/Assembler/commands/CMakeLists.txt
+++ b/Source/Software/Assembler/commands/CMakeLists.txt
@@ -1,18 +1,10 @@
-add_library(commands
-    command_base.cpp
-    command_interface.hpp
-    command_parser.cpp
-    commands.cpp
-)
-
-target_include_directories(commands
-    PUBLIC
-        ${CMAKE_SOURCE_DIR}/lines
-        ${CMAKE_SOURCE_DIR}/common
-)
-
-target_link_libraries(commands
-    PRIVATE
+assembler_add_library(commands
+    SRC
+        command_base.cpp
+        command_interface.hpp
+        command_parser.cpp
+        commands.cpp
+    LIB
         lines
         common
 )
