--- a/Source/Software/Assembler/preprocessing/CMakeLists.txt
+++ b/Source/Software/Assembler/preprocessing/CMakeLists.txt
@@ -1,15 +1,4 @@
-add_library(preprocessing
-    preprocessor.cpp
-)
-
-target_include_directories(preprocessing
-    PUBLIC
-        ${CMAKE_SOURCE_DIR}/lines
-        ${CMAKE_SOURCE_DIR}/commands
-)
-
-target_link_libraries(preprocessing
-    PRIVATE
-        lines
-        commands
+assembler_add_library(preprocessing
+    SRC preprocessor.cpp
+    LIB lines commands
 )
