feat: ivt assembling

--- a/Source/Software/Assembler/preprocessing/CMakeLists.txt
+++ b/Source/Software/Assembler/preprocessing/CMakeLists.txt
@@ -1,4 +1,8 @@
 assembler_add_library(preprocessing
-    SRC preprocessor.cpp
-    LIB lines commands
+    SRC
+        preprocessor.cpp
+        ivt.cpp
+    LIB
+        lines
+        commands
 )
